[package]
name = "pg_unrecognized_node"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.13"
sqlx = { version = "0.5.1", default-features = false, features = ["offline", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.4.0", features = ["full"]}
